fixed horizontal scrolling by repairing What We Do content

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body  {
   margin: 0;
   background-color: #ddd;
   color: #451b16;
-  padding: 2rem;
 }
 
 h1  {
